--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"layerchart": "^2.0.0-next.27",
 		"mode-watcher": "^1.1.0",
 		"paneforge": "^1.0.0",
+		"pocketbase": "^0.26.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
