--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@tanstack/table-core": "^8.21.3",
+		"@types/node": "^24.1.0",
 		"bits-ui": "^2.8.13",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.6.0",
