--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:e2e": "playwright test",
-		"test": "npm run test:e2e"
+		"test:e2e:ui": "playwright test --ui",
+		"test:e2e:debug": "playwright test --debug",
+		"test": "npm run test:e2e",
+		"pb:download": "curl -L https://github.com/pocketbase/pocketbase/releases/latest/download/pocketbase_0.22.0_darwin_arm64.zip -o pocketbase.zip && unzip pocketbase.zip && rm pocketbase.zip",
+		"postinstall": "npm run pb:download || echo 'PocketBase download failed, please install manually'"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
