--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test:e2e:ui": "playwright test --ui",
 		"test:e2e:debug": "playwright test --debug",
 		"test": "npm run test:e2e",
-		"pb:download": "curl -L https://github.com/pocketbase/pocketbase/releases/latest/download/pocketbase_0.22.0_darwin_arm64.zip -o pocketbase.zip && unzip pocketbase.zip && rm pocketbase.zip",
+		"pb:download": "curl -s https://api.github.com/repos/pocketbase/pocketbase/releases/latest | grep 'browser_download_url.*darwin_arm64' | cut -d '\"' -f 4 | xargs curl -L -o pocketbase.zip && unzip pocketbase.zip && rm pocketbase.zip",
 		"postinstall": "npm run pb:download || echo 'PocketBase download failed, please install manually'"
 	},
 	"devDependencies": {
