--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"pb": "./pocketbase/pocketbase serve",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -16,9 +15,7 @@
 		"test:e2e": "playwright test",
 		"test:e2e:ui": "playwright test --ui",
 		"test:e2e:debug": "playwright test --debug",
-		"test": "npm run test:e2e",
-		"pb:download": "mkdir -p pocketbase && curl -s https://api.github.com/repos/pocketbase/pocketbase/releases/latest | grep 'browser_download_url.*darwin_arm64' | cut -d '\"' -f 4 | xargs curl -L -o pocketbase.zip && unzip pocketbase.zip && mv pocketbase pocketbase/pocketbase && rm pocketbase.zip CHANGELOG.md LICENSE.md && chmod +x pocketbase/pocketbase && echo \"Downloaded latest PocketBase\"",
-		"postinstall": "npm run pb:download || echo 'PocketBase download failed, please install manually'"
+		"test": "npm run test:e2e"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -43,7 +40,6 @@
 		"layerchart": "^2.0.0-next.27",
 		"mode-watcher": "^1.1.0",
 		"paneforge": "^1.0.0",
-		"pocketbase": "^0.26.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
