--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:e2e": "playwright test",
-		"test:e2e:ui": "playwright test --ui",
-		"test:e2e:debug": "playwright test --debug",
-		"test": "npm run test:e2e"
+		"test": "playwright test"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
