--- a/package.json
+++ b/package.json
@@ -55,5 +55,10 @@
 		"valibot": "^1.1.0",
 		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@better-auth/client": "^0.0.2-alpha.3",
+		"@convex-dev/auth": "^0.0.88",
+		"better-auth": "^1.3.6"
 	}
 }
