Improve code quality and project structure
- Remove Convex generated files from version control
- Add _generated folders to .gitignore
- Use Svelte's browser check instead of typeof window
- Use Convex generated types directly (Doc<'users'>)
- Add unique AUTH_TOKEN_KEY constant for localStorage
- Add $convex alias to svelte.config.js for cleaner imports
- Rename and co-locate auth-guard component with usage
- Fix all TypeScript any types with proper typing
- Remove unused imports across the codebase
- Add key to each block for better Svelte rendering
- Add npm run quality script for format, lint, and check
- Update GitHub workflows for better CI/CD

All linting errors fixed and quality checks passing.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,30 +1,19 @@
 name: Lint
 
 on:
-  push:
-    branches: [master, main]
   pull_request:
-    branches: [master, main]
 
 jobs:
   lint:
+    name: Run linter
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: 22
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run linter
-        run: npm run lint
-
-      - name: Run type check
-        run: npm run check
+      - run: npm ci
+      - run: npm run lint
