--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,36 @@
-name: E2E Tests
+name: Tests
 
 on:
-  push:
-    branches: [master, main]
   pull_request:
-    branches: [master, main]
 
 jobs:
-  test:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: '22'
 
-      - name: Install dependencies
+      - name: Install Node dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium webkit
 
-      - name: Run tests
-        run: npm run test
+      - name: Run Playwright tests
+        run: npm test
+        env:
+          CI: true
 
-      - name: Upload Playwright report
+      - name: Upload test results
         uses: actions/upload-artifact@v4
-        if: always()
+        if: always() # Upload results even if tests fail
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 10
+          name: playwright-test-results
+          path: test-results/
+          retention-days: 2
