--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test": "playwright test"
+		"test": "playwright test",
+		"quality": "npm run format && npm run lint && npm run check"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
