Refactor test database clearing and improve Convex dev setup
- Move clearAllData function directly into auth.test.ts
- Remove test-helpers.ts file to simplify forking
- Add IS_DEV_OR_TEST environment check to prevent production data clearing
- Update npm scripts to run Convex in non-interactive mode
- Simplify CI workflow to use npm test's built-in env var setting
- Clean up test file formatting (remove comments and empty lines)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
             sleep 1
           done
 
-          # Run the tests with Convex still running
+          # Run the tests with Convex still running (npm test will set IS_DEV_OR_TEST)
           npm test
           TEST_EXIT_CODE=$?
 
