--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"clsx": "^2.1.1",
 		"convex": "^1.25.4",
 		"convex-svelte": "^0.0.11",
+		"dotenv": "^17.2.1",
 		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
