--- a/package.json
+++ b/package.json
@@ -60,8 +60,6 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@better-auth/client": "^0.0.2-alpha.3",
-		"@convex-dev/auth": "^0.0.88",
-		"better-auth": "^1.3.6"
+		"@convex-dev/auth": "^0.0.88"
 	}
 }
