--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,63 @@
-name: E2E Tests
+name: Tests
 
 on:
-  push:
-    branches: [master, main]
   pull_request:
-    branches: [master, main]
 
 jobs:
-  test:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: '22'
 
-      - name: Install dependencies
+      - name: Install Node dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium webkit
 
-      - name: Run tests
-        run: npm run test
+      - name: Start Convex and Run Tests
+        run: |
+          # Start Convex in the background
+          CONVEX_AGENT_MODE=anonymous npx convex dev > convex.log 2>&1 &
+          CONVEX_PID=$!
 
-      - name: Upload Playwright report
+          # Wait for Convex to be ready
+          echo "Waiting for Convex to be ready..."
+          for i in {1..60}; do
+            if grep -q "Convex functions ready!" convex.log 2>/dev/null; then
+              echo "Convex is ready!"
+              break
+            fi
+            if [ $i -eq 60 ]; then
+              echo "Timeout waiting for Convex"
+              cat convex.log
+              exit 1
+            fi
+            sleep 1
+          done
+
+          # Run the tests with Convex still running (npm test will set IS_DEV_OR_TEST)
+          npm test
+          TEST_EXIT_CODE=$?
+
+          # Clean up
+          kill $CONVEX_PID || true
+
+          exit $TEST_EXIT_CODE
+        env:
+          CI: true
+
+      - name: Upload test results
         uses: actions/upload-artifact@v4
-        if: always()
+        if: always() # Upload results even if tests fail
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 10
+          name: playwright-test-results
+          path: test-results/
+          retention-days: 2
