--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
+		"convex": "CONVEX_AGENT_MODE=anonymous npx convex dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -12,7 +13,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test": "playwright test"
+		"test": "npx convex env set IS_DEV_OR_TEST true 2>/dev/null || true && playwright test",
+		"quality": "npm run format && npm run lint && npm run check"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -28,6 +30,9 @@
 		"@types/node": "^24.1.0",
 		"bits-ui": "^2.8.13",
 		"clsx": "^2.1.1",
+		"convex": "^1.25.4",
+		"convex-svelte": "^0.0.11",
+		"dotenv": "^17.2.1",
 		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
@@ -53,5 +58,12 @@
 		"valibot": "^1.1.0",
 		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"@convex-dev/auth": "^0.0.88",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/crypto-js": "^4.2.2",
+		"bcryptjs": "^3.0.2",
+		"crypto-js": "^4.2.0"
 	}
 }
